gateway/envoy.yaml
admin:
  access_log_path: /var/log/envoy-access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_host
                      require_tls: EXTERNAL_ONLY
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/"
                          route:
                            host_rewrite: ${function_host}
                            prefix_rewrite: "/"
                            cluster: function
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: ${bucket_host}
                            cluster: bucket
                http_filters:
                  - name: envoy.router
  clusters:
    - name: function
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: function
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${function_host}
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
          sni: ${function_host}
    - name: bucket
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: bucket
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ${bucket_host}
                      port_value: 80
